--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -1,6 +1,9 @@
 .story {
   width: 75%;
-  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 7rem;
+  margin-top: 0rem;
   box-shadow: 0 3rem 6rem rgba($color-black, 0.1);
   background-color: $color-white;
   border-radius: 3px;
@@ -64,5 +67,7 @@
 
   &:hover &__img {
     transform: translateX(-4rem) scale(1);
+
+    filter: blur(3px) brightness(80%);
   }
 }
